test nhanh anhphap2412

--- a/front-end/templates/index.html
+++ b/front-end/templates/index.html
@@ -81,7 +81,9 @@
         </div>
         
         <div class="grid">
-            <div class="content_banner"></div>
+            <div class="content_banner">
+                <img src="../static/assets/img/DALL.png" alt="anhnen">
+            </div>
         </div>
 
         <div class="grid">
