--- a/front-end/static/assets/css/style.css
+++ b/front-end/static/assets/css/style.css
@@ -314,10 +314,16 @@
 .content_banner {
     margin: 150px 30px 30px;
     padding-top: 55%;
-    background-image: url('/static/assets/img/DALL.png');
+    /* background-image: url("../static/assets/img/DALL.png"); */
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
+}
+
+.content_banner img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .content_introduce {
