phan tan server flask

--- a/WebServer/templates/cart.html
+++ b/WebServer/templates/cart.html
@@ -36,12 +36,12 @@
                 </div>
     
                 <nav class="header_navbar">
-                    <a href="#" class="header_navbar-logo">
+                    <a href="/" class="header_navbar-logo">
                         <img src="../static/assets/img/Gemini_Generated_Image_krh9ixkrh9ixkrh9.jpg" alt="" title="Teddy Paradise - teddyparadise.com" class="header_navbar-logo">
                     </a>
 
                     <ul class="header_navbar-list">
-                        <li class="header_navbar-item"><a href="/index">Trang chủ</a></li>
+                        <li class="header_navbar-item"><a href="/">Trang chủ</a></li>
                         <li class="header_navbar-item"><a href="/introduce">Giới thiệu</a></li>
                         <li class="header_navbar-item"><a href="/products">Sản phẩm</a></li>
                         <li class="header_navbar-item"><a href="/contact">Liên hệ</a></li>
@@ -83,7 +83,7 @@
             <div class="cart_header">
                 <a href="/cart" class="cart_header-cart">GIỎ HÀNG</a>
                 <i class="cart_header-arrow fa-solid fa-chevron-right"></i>
-                <a href="#" class="cart_header-payment">CHI TIẾT THANH TOÁN</a>
+                <a href="/" class="cart_header-payment">CHI TIẾT THANH TOÁN</a>
                 <i class="cart_header-arrow fa-solid fa-chevron-right"></i>
                 <p class="cart_header-success">HOÀN THÀNH ĐƠN HÀNG</p>
             </div>
