--- a/WebServer/templates/product6.html
+++ b/WebServer/templates/product6.html
@@ -36,12 +36,12 @@
                 </div>
     
                 <nav class="header_navbar">
-                    <a href="#" class="header_navbar-logo">
+                    <a href="/" class="header_navbar-logo">
                         <img src="./assets/img/Gemini_Generated_Image_krh9ixkrh9ixkrh9.jpg" alt="" title="Teddy Paradise - teddyparadise.com" class="header_navbar-logo">
                     </a>
 
                     <ul class="header_navbar-list">
-                        <li class="header_navbar-item"><a href="/index">Trang chủ</a></li>
+                        <li class="header_navbar-item"><a href="/">Trang chủ</a></li>
                         <li class="header_navbar-item"><a href="/introduce">Giới thiệu</a></li>
                         <li class="header_navbar-item"><a href="/products">Sản phẩm</a></li>
                         <li class="header_navbar-item"><a href="/contact">Liên hệ</a></li>
@@ -87,7 +87,7 @@
                     </div>
                     <div class="product_page-intro-item">
                         <div class="product_page-intro-subtitle">
-                            <a href="/index" class="product_subtitle-trangchu">TRANG CHỦ</a>
+                            <a href="/" class="product_subtitle-trangchu">TRANG CHỦ</a>
                             <p class="subdivider">/</p>
                             <a href="/products" class="product_page-subtitle-sanpham">SẢN PHẨM</a>
                         </div>
