--- a/WebServer/templates/products.html
+++ b/WebServer/templates/products.html
@@ -38,11 +38,11 @@
                 </div>
     
                 <nav class="header_navbar">
-                    <a href="#" class="header_navbar-logo">
+                    <a href="/" class="header_navbar-logo">
                         <img src="../static/assets/img/Gemini_Generated_Image_krh9ixkrh9ixkrh9.jpg" alt="" title="Teddy Paradise - teddyparadise.com" class="header_navbar-logo">
                     </a>
                     <ul class="header_navbar-list">
-                        <li class="header_navbar-item"><a href="/index">Trang chủ</a></li>
+                        <li class="header_navbar-item"><a href="/">Trang chủ</a></li>
                         <li class="header_navbar-item"><a href="/introduce">Giới thiệu</a></li>
                         <li class="header_navbar-item"><a href="/products">Sản phẩm</a></li>
                         <li class="header_navbar-item"><a href="/contact">Liên hệ</a></li>
@@ -82,7 +82,7 @@
         <div class="grid">
             <div class="product_container">
                 <div class="product_title">
-                    <a href="/index" class="product_title-text product_title-trangchu">TRANG CHỦ</a>
+                    <a href="/" class="product_title-text product_title-trangchu">TRANG CHỦ</a>
                     <div class="product_title-text divider">/</div>
                     <p class="product_title-text product_title-sanpham">SẢN PHẨM</p>
                 </div>
