--- a/WebServer/templates/index.html
+++ b/WebServer/templates/index.html
@@ -37,12 +37,12 @@
                 </div>
     
                 <nav class="header_navbar">
-                    <a href="#" class="header_navbar-logo">
+                    <a href="/" class="header_navbar-logo">
                         <img src="../static/assets/img/Gemini_Generated_Image_krh9ixkrh9ixkrh9.jpg" alt="" title="Teddy Paradise - teddyparadise.com" class="header_navbar-logo">
                     </a>
 
                     <ul class="header_navbar-list">
-                        <li class="header_navbar-item"><a href="/index">Trang chủ</a></li>
+                        <li class="header_navbar-item"><a href="/">Trang chủ</a></li>
                         <li class="header_navbar-item"><a href="/introduce">Giới thiệu</a></li>
                         <li class="header_navbar-item"><a href="/products">Sản phẩm</a></li>
                         <li class="header_navbar-item"><a href="/contact">Liên hệ</a></li>
@@ -188,71 +188,41 @@
 
    <!-- Modal -->
    <div class="modal js_modal">
-        <div class="modal_overlay js_overlay"></div>
-        <div class="modal_body">
-            <!-- Login Form -->
-            <div class="auth_form js_login-form">
-                <div class="auth_form-header">
-                    <h3 class="auth_form-heading">ĐĂNG NHẬP</h3>
-                    <span class="auth_form-switch js_switch">ĐĂNG KÝ</span>
+    <div class="modal_overlay js_overlay"></div>
+    <div class="modal_body">
+        <!-- Login Form -->
+        <div class="auth_form js_login-form">
+            <div class="auth_form-header">
+                <h3 class="auth_form-heading">ĐĂNG NHẬP</h3>
+                <span class="auth_form-switch js_switch">ĐĂNG KÝ</span>
+            </div>
+            
+            <div class="auth_form-form">
+                <div class="auth_form-group">
+                    <input type="text" class="auth_form-input" placeholder="Địa chỉ Email">
                 </div>
-                
-                <div class="auth_form-form">
-                    <div class="auth_form-group">
-                        <input type="text" class="auth_form-input" placeholder="Địa chỉ Email">
-                    </div>
-                    <div class="auth_form-group">
-                        <input type="password" class="auth_form-input" placeholder="Mật khẩu">
-                    </div>
-                </div>
-
-                <div class="auth_form-remember">
-                    <label>
-                        <input type="checkbox" class="auth_form-check">
-                        <span class="auth_form-remember-text">Ghi nhớ mật khẩu</span>
-                    </label>
-                </div>
-
-                <div class="auth_form-controls">
-                    <button class="btn btn_back js_modal-close">TRỞ LẠI</button>
-                    <button class="btn btn_login-register">ĐĂNG NHẬP</button>
-                </div>
-
-                <div class="auth_form-forget">
-                    <a href="">Quên mật khẩu?</a>
+                <div class="auth_form-group">
+                    <input type="password" class="auth_form-input" placeholder="Mật khẩu">
                 </div>
             </div>
 
-             <!-- Register Form -->
-             <div class="auth_form js_register-form" style="display: none;">
-                <div class="auth_form-header">
-                    <h3 class="auth_form-heading">ĐĂNG KÝ</h3>
-                    <span class="auth_form-switch js_switch">ĐĂNG NHẬP</span>
-                </div>
-                
-                <div class="auth_form-form">
-                    <div class="auth_form-group">
-                        <input type="text" class="auth_form-input" placeholder="Địa chỉ Email">
-                    </div>
-                    <div class="auth_form-group">
-                        <input type="password" class="auth_form-input" placeholder="Mật khẩu">
-                    </div>
-                    <div class="auth_form-group">
-                        <input type="password" class="auth_form-input" placeholder="Nhập lại mật khẩu">
-                    </div>
-                </div>
+            <div class="auth_form-remember">
+                <label>
+                    <input type="checkbox" class="auth_form-check">
+                    <span class="auth_form-remember-text">Ghi nhớ mật khẩu</span>
+                </label>
+            </div>
 
-                <div class="auth_form-aside">
-                    <p class="auth_form-policy">Dữ liệu cá nhân của bạn sẽ được sử dụng để hỗ trợ trải nghiệm của bạn trên toàn bộ trang web này, quản lý quyền truy cập vào tài khoản của bạn, và cho các mục đích khác được mô tả trong chính sách riêng tư của chúng tôi.</p>
-                </div>
+            <div class="auth_form-controls">
+                <button class="btn btn_back js_modal-close">TRỞ LẠI</button>
+                <button class="btn btn_login-register">ĐĂNG NHẬP</button>
+            </div>
 
-                <div class="auth_form-controls">
-                    <button class="btn btn_back js_modal-close">TRỞ LẠI</button>
-                    <button class="btn btn_login-register">ĐĂNG KÝ</button>
-                </div>
+            <div class="auth_form-forget">
+                <a href="#">Quên mật khẩu?</a>
             </div>
         </div>
-   </div>
+    </div>
    
    <script src="../static/assets/js/search.js"></script>
    <script src="../static/assets/js/auth.js"></script>
