--- a/WebServer/templates/products.html
+++ b/WebServer/templates/products.html
@@ -92,7 +92,7 @@
                         <p class="product_list-price">270.000₫</p>
                         <button class="product_list-addtocart" data-id="1"
                             data-name="Gấu nhồi bông cho bé ôm ngủ đáng yêu" data-price="270000"
-                            data-image="/static/assets/img/product1.png">THÊM VÀO GIỎ HÀNG</button>
+                            data-image="../static/assets/img/product1.png">THÊM VÀO GIỎ HÀNG</button>
                     </div>
 
                     <div class="product_list-item">
@@ -100,7 +100,7 @@
                         <p class="product_list-title">Gấu bông Shiba đầu to thân nhỏ</p>
                         <p class="product_list-price">320.000₫</p>
                         <button class="product_list-addtocart" data-id="2" data-name="Gấu bông Shiba đầu to thân nhỏ"
-                            data-price="320000" data-image="/static/assets/img/product2.png">THÊM VÀO GIỎ HÀNG</button>
+                            data-price="320000" data-image="../static/assets/img/product2.png">THÊM VÀO GIỎ HÀNG</button>
                     </div>
 
                     <div class="product_list-item">
@@ -108,7 +108,7 @@
                         <p class="product_list-title">Kuromi ôm búp bê</p>
                         <p class="product_list-price">280.000₫</p>
                         <button class="product_list-addtocart" data-id="3" data-name="Kuromi ôm búp bê"
-                            data-price="280000" data-image="/static/assets/img/product3.png">THÊM VÀO GIỎ HÀNG</button>
+                            data-price="280000" data-image="../static/assets/img/product3.png">THÊM VÀO GIỎ HÀNG</button>
                     </div>
 
                     <div class="product_list-item">
@@ -116,7 +116,7 @@
                         <p class="product_list-title">Gà vô tri Kichi Hihi</p>
                         <p class="product_list-price">380.000₫</p>
                         <button class="product_list-addtocart" data-id="4" data-name="Gà vô tri Kichi Hihi"
-                            data-price="380000" data-image="/static/assets/img/product4.png">THÊM VÀO GIỎ HÀNG</button>
+                            data-price="380000" data-image="../static/assets/img/product4.png">THÊM VÀO GIỎ HÀNG</button>
                     </div>
 
                     <div class="product_list-item">
@@ -124,7 +124,7 @@
                         <p class="product_list-title">Gấu bông Hải Ly Loopy Cosplay</p>
                         <p class="product_list-price">320.000₫</p>
                         <button class="product_list-addtocart" data-id="5" data-name="Gấu bông Hải Ly Loopy Cosplay"
-                            data-price="320000" data-image="/static/assets/img/product5.png">THÊM VÀO GIỎ HÀNG</button>
+                            data-price="320000" data-image="../static/assets/img/product5.png">THÊM VÀO GIỎ HÀNG</button>
                     </div>
 
                     <div class="product_list-item">
@@ -133,7 +133,7 @@
                         <p class="product_list-price">360.000₫</p>
                         <button class="product_list-addtocart" data-id="6"
                             data-name="Gấu bông chuột lang nước cõng rùa Capypara" data-price="360000"
-                            data-image="/static/assets/img/product6.png">THÊM VÀO GIỎ HÀNG</button>
+                            data-image="../static/assets/img/product6.png">THÊM VÀO GIỎ HÀNG</button>
                     </div>
 
                     <div class="product_list-item">
@@ -141,7 +141,7 @@
                         <p class="product_list-title">Gấu trúc trong ống tre Tori Panda</p>
                         <p class="product_list-price">280.000₫</p>
                         <button class="product_list-addtocart" data-id="7" data-name="Gấu trúc trong ống tre Tori Panda"
-                            data-price="280000" data-image="/static/assets/img/product7.png">THÊM VÀO GIỎ HÀNG</button>
+                            data-price="280000" data-image="../static/assets/img/product7.png">THÊM VÀO GIỎ HÀNG</button>
                     </div>
 
                     <div class="product_list-item">
@@ -149,7 +149,7 @@
                         <p class="product_list-title">Cặp đôi heo hồng Wedding Pig</p>
                         <p class="product_list-price">260.000₫</p>
                         <button class="product_list-addtocart" data-id="8" data-name="Cặp đôi heo hồng Wedding Pig"
-                            data-price="260000" data-image="/static/assets/img/product8.png">THÊM VÀO GIỎ HÀNG</button>
+                            data-price="260000" data-image="../static/assets/img/product8.png">THÊM VÀO GIỎ HÀNG</button>
                     </div>
 
                     <div class="product_list-item">
@@ -157,7 +157,7 @@
                         <p class="product_list-title">Bé cừu béo Shaun The Sheep</p>
                         <p class="product_list-price">190.000₫</p>
                         <button class="product_list-addtocart" data-id="9" data-name="Bé cừu béo Shaun The Sheep"
-                            data-price="190000" data-image="/static/assets/img/product9.png">THÊM VÀO GIỎ HÀNG</button>
+                            data-price="190000" data-image="../static/assets/img/product9.png">THÊM VÀO GIỎ HÀNG</button>
                     </div>
 
                     <div class="product_list-item">
@@ -165,7 +165,7 @@
                         <p class="product_list-title">Mèo Lucifer mặt quạo</p>
                         <p class="product_list-price">560.000₫</p>
                         <button class="product_list-addtocart" data-id="10" data-name="Mèo Lucifer mặt quạo"
-                            data-price="560000" data-image="/static/assets/img/product10.png">THÊM VÀO GIỎ HÀNG</button>
+                            data-price="560000" data-image="../static/assets/img/product10.png">THÊM VÀO GIỎ HÀNG</button>
                     </div>
 
                     <div class="product_list-item">
@@ -173,7 +173,7 @@
                         <p class="product_list-title">Khủng long Nisa baby</p>
                         <p class="product_list-price">220.000₫</p>
                         <button class="product_list-addtocart" data-id="11" data-name="Khủng long Nisa baby"
-                            data-price="220000" data-image="/static/assets/img/product11.png">THÊM VÀO GIỎ HÀNG</button>
+                            data-price="220000" data-image="../static/assets/img/product11.png">THÊM VÀO GIỎ HÀNG</button>
                     </div>
 
                     <div class="product_list-item">
@@ -183,7 +183,7 @@
                         <p class="product_list-price">430.000₫</p>
                         <button class="product_list-addtocart" data-id="12"
                             data-name="Gấu bông ủ tay kèm chăn Lotso cao cấp 3 in 1" data-price="430000"
-                            data-image="/static/assets/img/product12.png">THÊM VÀO GIỎ HÀNG</button>
+                            data-image="../static/assets/img/product12.png">THÊM VÀO GIỎ HÀNG</button>
                     </div>
                 </div>
 
